<resources>
    <string name="app_name">QuickTrade</string>
    <string name="title_activity_users" translatable="false">ActivityUsers</string>
    <string name="hola">Hello</string>
    <string name="my_profile">My profile</string>
    <string name="estadisticas">Statistics</string>
    <string name="cerrar_sesion">Sign Out</string>
    <string name="add_product">Add product</string>
    <string name="edit_profile">Edit profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="question_delete">Delete your account?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="for_delete_account">For remove your account.</string>
    <string name="consecuencia_eliminar_cuenta">Notice! \\nAll your data associated with your email address will be deleted. You will not be able to retrieve the information.</string>
    <string name="login_correct">Session started correctly</string>
    <string name="for_change_email">For change your email directión.</string>
    <string name="consecuencia_cambiar_correo">Notice! Your email address will be changed and you will have to log in with your new email address.</string>
    <string name="user">User</string>
    <string name="deleted">deleted</string>
    <string name="deleted_products">Products deleted</string>
    <string name="error_delete">Error deleting:</string>
    <string name="changed_email">Email changed to</string>
    <string name="error_change_mail">Error changing the mail:</string>
    <string name="error_input_email">Enter your email address.</string>
    <string name="error_input_emailincorrect">Email incorrect!</string>
    <string name="error_input_password_empty">Enter your password.</string>
    <string name="error_input_values_empty">There can not be empty fields!</string>
    <string name="edit_name_changed">"Name changed to "</string>
    <string name="edit_surnames_changed">"Surname changed to "</string>
    <string name="edit_direction_changed">"Address changed to "</string>
    <string name="count_users">x Users</string>
    <string name="count_products">x Products</string>
    <string name="error">Error:</string>
    <string name="send_password">"Password send to "</string>
    <string name="question_logout">Log out?</string>
    <string name="error_input_nameproduct">Enter the name of the product</string>
    <string name="error_input_descriptionproduct">Enter the description of the product</string>
    <string name="error_input_precioproduct">Enter the price of product</string>
    <string name="error_user_existe">are you already registered</string>
    <string name="error_input_value_empty">This field can not be blank</string>
    <string name="txtLogin">Log in</string>
    <string name="txtCorreo">Email</string>
    <string name="txtContraseña">Password</string>
    <string name="txtConfirmar">Confirm</string>
    <string name="txtCancelar">Cancel</string>
    <string name="txtNombre">Name</string>
    <string name="txtApedillos">Surname</string>
    <string name="txtDireccion">Address</string>
    <string name="txtRegistrarse">Sign in</string>
    <string name="txtPassOlvidado">Have you forgotten your password?</string>
    <string name="txtRecuperarContraseña">Recover password</string>
    <string name="txtVacioElementos">Without elements</string>
    <string name="txtNameProduct">Name product</string>
    <string name="txtDescriptionProduct">Description product</string>
    <string name="txtCategoria">Category</string>
    <string name="txtPrecio">Price</string>
    <string name="txtSubirProducto">Upload product</string>
    <string name="txtProfile">Profile</string>
    <string name="txtConfirm_for">Log in to continue...</string>
    <string name="txtProducto">Product</string>
    <string name="delete_product">Delete product</string>
    <string name="question_delete_product">Delete your product?</string>
    <string name="edit_product">Edit product</string>
    <string name="edit_description_changed">Description changed</string>
    <string name="edit_price_changed">"Price changed to "</string>
    <string name="filtros">Filters</string>
    <string name="edit_category_changed">Category changed</string>
</resources>
