<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnPerfil"
        android:icon="@drawable/account_icon"
        android:title="@string/my_profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnEstadisticas"
        android:icon="@drawable/estadisticas_icon"
        android:title="@string/estadisticas"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnFiltros"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/filtros"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnCerrar"
        android:icon="@drawable/exit_icon"
        android:title="@string/cerrar_sesion"
        app:showAsAction="always" />
</menu>