<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/mnNuevoProducto"
        android:icon="@drawable/add_icon"
        android:title="@string/add_product"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/mnMisFavs"
        android:icon="@drawable/star_full"
        android:title="Mis favoritos"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnEdit"
        android:icon="@drawable/edit_icon"
        android:title="@string/edit_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mnEliminar"
        android:icon="@drawable/delete_icon"
        android:title="@string/delete_profile"
        app:showAsAction="ifRoom" />
</menu>